<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="cz.lifecode.openaiclient.Views.UI.Images.ImagesFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_images" />

    <fragment
        android:id="@+id/navigation_images"
        android:name="cz.lifecode.openaiclient.Views.UI.Chat.ChatFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="cz.lifecode.openaiclient.Views.UI.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>